// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserAvatar /> renders correctly 1`] = `
<span
  className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz mr-10"
  hasBadge={false}
>
  <div
    className="sc-bcXGCL coaCsH sc-ckEbfr cQtcUn cap-avatar"
    title="toto"
  >
    <img
      alt="toto"
      className="sc-bcXGCL dJhUBQ"
      src="http://media12/profileAvatar.jpg"
      style={
        Object {
          "objectFit": "cover",
        }
      }
      title="toto"
    />
  </div>
</span>
`;

exports[`<UserAvatar /> renders correctly user without avatar 1`] = `
<span
  className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz"
  hasBadge={false}
>
  <div
    className="sc-bcXGCL coaCsH sc-ckEbfr cQtcUn cap-avatar"
    title="toto"
  >
    t
  </div>
</span>
`;

exports[`<UserAvatar /> renders correctly with custom default avatar 1`] = `
<span
  className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz"
  hasBadge={false}
>
  <div
    className="sc-bcXGCL coaCsH sc-ckEbfr bCwZSC cap-avatar"
    title="toto"
  >
    t
  </div>
</span>
`;

exports[`<UserAvatar /> renders correctly with default avatar needed 1`] = `
<span
  className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz mr-10"
  hasBadge={false}
>
  <div
    className="sc-bcXGCL coaCsH sc-ckEbfr cQtcUn cap-avatar"
    title="toto"
  >
    <img
      alt="toto"
      className="sc-bcXGCL dJhUBQ"
      src="http://media12/profileAvatar.jpg"
      style={
        Object {
          "objectFit": "cover",
        }
      }
      title="toto"
    />
  </div>
</span>
`;
